force-app/main/default/objects/Port_Drayage_Labor_Commissioner_Office__mdt/Port_Drayage_Labor_Commissioner_Office__mdt.object-meta.xml
<CustomObject>
    <label>Port Drayage Labor Commissioner Office</label>
    <pluralLabel>Port Drayage Labor Commissioner Offices</pluralLabel>
</CustomObject>