force-app/main/default/objects/Port_Drayage_Labor_Commissioner_Office__mdt/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>