force-app/main/default/objects/Port_Drayage_Labor_Commissioner_Office__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>