force-app/main/default/objects/Port_Drayage_Labor_Commissioner_Office__mdt/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <label>Street1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>