force-app/main/default/objects/Port_Drayage_Labor_Commissioner_Office__mdt/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <label>Street2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>